[gd_scene load_steps=19 format=3 uid="uid://jgby34y1664r"]

[ext_resource type="Script" uid="uid://dn5567lxyuyyi" path="res://scenes/main_game/combat/player/player.gd" id="1_3t8ap"]
[ext_resource type="PackedScene" uid="uid://dcsmfjbtvdbk3" path="res://scenes/main_game/combat/player/player_sprite.tscn" id="1_4v0bi"]
[ext_resource type="Texture2D" uid="uid://dywpvxxevs23u" path="res://resources/sprites/characters/player/player_pollinator.png" id="2_hap8c"]
[ext_resource type="Texture2D" uid="uid://dachyaiwwtbrh" path="res://resources/sprites/GUI/indicators/player_down_arrow.png" id="4_0f2bv"]
[ext_resource type="PackedScene" uid="uid://blco6hprwp4nn" path="res://scenes/state_machine/player/player_state_machine.tscn" id="5_0f2bv"]
[ext_resource type="PackedScene" uid="uid://bh342eajde68t" path="res://scenes/GUI/controls/buttons/gui_player_move_button.tscn" id="6_utenh"]
[ext_resource type="AudioStream" uid="uid://deluauv4rx35y" path="res://resources/sounds/SFX/other/character/hurt.wav" id="7_3ckgi"]
[ext_resource type="Texture2D" uid="uid://0fgf3t3c1paq" path="res://resources/sprites/effects/particles/particle_smoke.png" id="8_g2v38"]

[sub_resource type="AtlasTexture" id="AtlasTexture_0f2bv"]
atlas = ExtResource("2_hap8c")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_utenh"]
atlas = ExtResource("2_hap8c")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_3ckgi"]
atlas = ExtResource("2_hap8c")
region = Rect2(0, 16, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_g2v38"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0f2bv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_utenh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3ckgi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_utenh")
}],
"loop": true,
"name": &"idle",
"speed": 7.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_g2v38"]
atlas = ExtResource("4_0f2bv")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_mohyj"]
atlas = ExtResource("4_0f2bv")
region = Rect2(16, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_67t8q"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_g2v38")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g2v38")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mohyj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g2v38")
}],
"loop": true,
"name": &"idle",
"speed": 7.0
}]

[sub_resource type="Curve" id="Curve_g2v38"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), -2.6730251, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_mohyj"]
curve = SubResource("Curve_g2v38")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_g2v38"]
particle_flag_disable_z = true
spread = 180.0
initial_velocity_min = 50.0
initial_velocity_max = 60.0
gravity = Vector3(0, -100, 0)
scale_min = 0.099999994
scale_max = 0.19999999
alpha_curve = SubResource("CurveTexture_mohyj")

[node name="Player" type="Node2D"]
script = ExtResource("1_3t8ap")

[node name="PlayerSprite" parent="." instance=ExtResource("1_4v0bi")]
unique_name_in_owner = true
sprite_frames = SubResource("SpriteFrames_g2v38")

[node name="DownArrow" type="AnimatedSprite2D" parent="."]
unique_name_in_owner = true
texture_filter = 1
position = Vector2(0, 14)
sprite_frames = SubResource("SpriteFrames_67t8q")
animation = &"idle"
autoplay = "idle"
metadata/_aseprite_wizard_interface_config_ = {
"output_section": true,
"pending_changes": {}
}
metadata/_aseprite_wizard_config_ = {
"layers": [],
"o_ex_p": "",
"o_folder": "res://resources/sprites/GUI/indicators/",
"o_name": "",
"only_visible": true,
"should_round_fps": true,
"slice": "",
"source": "res://resources/sprites/GUI/indicators/player_down_arrow.aseprite"
}
metadata/_aseprite_wizard_source_file_hash_ = "6b22151874ffbec597e7bd8c3cb5111c"

[node name="PlayerStateMachine" parent="." instance=ExtResource("5_0f2bv")]
unique_name_in_owner = true

[node name="GUI" type="Control" parent="."]
unique_name_in_owner = true
layout_mode = 3
anchors_preset = 0

[node name="MoveIndicator" type="Label" parent="GUI"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -1.0
offset_top = -15.0
offset_right = 1.0
offset_bottom = -7.0
grow_horizontal = 2
grow_vertical = 2
theme_type_variation = &"HUD_mid"
horizontal_alignment = 1
vertical_alignment = 2

[node name="MoveUI" type="Control" parent="GUI"]
unique_name_in_owner = true
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="LeftButton" parent="GUI/MoveUI" instance=ExtResource("6_utenh")]
unique_name_in_owner = true
custom_minimum_size = Vector2(16, 16)
layout_mode = 0
offset_left = -25.0
offset_top = -8.0
offset_right = -9.0

[node name="RightButton" parent="GUI/MoveUI" instance=ExtResource("6_utenh")]
unique_name_in_owner = true
custom_minimum_size = Vector2(16, 16)
layout_mode = 0
offset_left = 9.0
offset_top = -8.0
offset_right = 25.0
flip_image_h = true

[node name="PlayerHurtAudio" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true
stream = ExtResource("7_3ckgi")
bus = &"SFX"

[node name="EnergyUpgradeParticle" type="GPUParticles2D" parent="."]
unique_name_in_owner = true
emitting = false
texture = ExtResource("8_g2v38")
lifetime = 0.5
one_shot = true
explosiveness = 1.0
process_material = SubResource("ParticleProcessMaterial_g2v38")
